--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -29,14 +29,9 @@
 
         <FrameLayout
             android:id="@+id/fragment_container"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"></FrameLayout>
-
-        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"></LinearLayout>
+            android:layout_height="0dp"
+            android:layout_weight="1"></FrameLayout>
 
     </LinearLayout>
 
