--- a/app/src/main/res/layout/content_navigation_drawer_row.xml
+++ b/app/src/main/res/layout/content_navigation_drawer_row.xml
@@ -11,6 +11,7 @@
         android:paddingLeft="30dp"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
-        android:textSize="15dp"
-        android:textStyle="bold" />
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:textColor="@color/colorAccent"/>
 </RelativeLayout>
