--- a/app/src/main/res/layout/content_favourites_screen.xml
+++ b/app/src/main/res/layout/content_favourites_screen.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:scrollbars="vertical">
 
     <TextView
         android:id="@+id/label"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="60dp"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
@@ -15,6 +16,7 @@
         android:textStyle="bold"/>
 
     <TextView
+        android:id="@+id/instructions"
         android:layout_below="@id/label"
         android:layout_centerInParent="true"
         android:layout_width="fill_parent"
@@ -23,4 +25,77 @@
         android:layout_marginTop="10dp"
         android:gravity="center_horizontal"
         android:text="Edit fragment_favourites.xml to change the appearance" />
+
+    <TableRow
+        android:id="@+id/tr_name"
+        android:layout_below="@+id/instructions"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp">
+        <TextView
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:text="Name"/>
+        <EditText
+            android:id="@+id/et_fav_name"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content" />
+    </TableRow>
+
+    <TableRow
+        android:id="@+id/tr_address"
+        android:layout_below="@+id/tr_name"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp">
+        <TextView
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:text="Address"/>
+        <EditText
+            android:id="@+id/et_fav_address"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content" />
+    </TableRow>
+
+    <Button
+        android:id="@+id/btn_add_fav"
+        android:layout_below="@+id/tr_address"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add"
+        />
+
+    <Button
+        android:id="@+id/btn_update_fav"
+        android:layout_below="@+id/tr_address"
+        android:layout_toRightOf="@+id/btn_add_fav"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Update"
+        />
+
+    <Button
+        android:id="@+id/btn_del_fav"
+        android:layout_below="@+id/tr_address"
+        android:layout_toRightOf="@+id/btn_update_fav"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Delete"
+        />
+
+    <Button
+        android:id="@+id/btn_refresh_fav"
+        android:layout_below="@+id/tr_address"
+        android:layout_toRightOf="@+id/btn_del_fav"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="REFRESH"
+        />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_fav_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/btn_add_fav"
+        android:layout_marginTop="15dp">
+    </android.support.v7.widget.RecyclerView>
+
 </RelativeLayout>
