--- a/app/src/main/res/layout/content_favourites_screen.xml
+++ b/app/src/main/res/layout/content_favourites_screen.xml
@@ -93,7 +93,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_fav_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="300dp"
         android:layout_below="@+id/btn_add_fav"
         android:layout_marginTop="15dp">
     </android.support.v7.widget.RecyclerView>
