--- a/app/src/main/res/layout/fragment_fav_list.xml
+++ b/app/src/main/res/layout/fragment_fav_list.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:layout_gravity="start"
 
-    android:name="com.example.vacho.realtimebusapp.FavoritesScreenFragment"
+    android:name="fragment.FavoritesScreenFragment"
     tools:layout="@layout/content_favourites_screen">
 
 </fragment>
