--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:layout_gravity="start"
     tools:showIn="@layout/activity_home_screen"
-    android:name="com.example.vacho.realtimebusapp.NavigationDrawerFragment"
+    android:name="fragment.NavigationDrawerFragment"
     tools:layout="@layout/content_navigation_drawer">
 
 </fragment>
