ItermediateMap Fragment added

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
 
     <!-- Navigation Drawer width -->
     <dimen name="nav_drawer_width">250dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
