--- a/app/src/main/res/layout/fragment_intermediate_map.xml
+++ b/app/src/main/res/layout/fragment_intermediate_map.xml
@@ -2,20 +2,53 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <EditText
-        android:id="@+id/et_fav_item_name"
+    <LinearLayout
+        android:id="@+id/ll_fav_item_fields"
         android:layout_width="match_parent"
-        android:layout_height="40dp" />
-    <EditText
-        android:id="@+id/et_fav_item_descr"
-        android:layout_width="match_parent"
-        android:layout_below="@+id/et_fav_item_name"
-        android:layout_height="40dp" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="?attr/actionBarSize"
+        android:orientation="vertical"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:paddingTop="20dp">
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_layout_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <EditText
+                android:id="@+id/et_fav_item_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:hint="@string/hint_fav_item_name" />
+        </android.support.design.widget.TextInputLayout>
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_layout_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <AutoCompleteTextView
+                android:id="@+id/atv_autocomplete_fav_item_address"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="50dp"
+                android:hint="Enter Place Here"/>
+        </android.support.design.widget.TextInputLayout>
+        <Button android:id="@+id/btn_signup"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/btn_add_fav_item"
+            android:background="@color/colorPrimary"
+            android:layout_marginTop="30dp"
+            android:textColor="@android:color/white"/>
+    </LinearLayout>
+
     <fragment
         android:id="@+id/f_intermediate_map"
         android:name="com.google.android.gms.maps.MapFragment"
         android:layout_width="match_parent"
-        android:layout_below="@+id/et_fav_item_descr"
+        android:layout_below="@+id/ll_fav_item_fields"
         android:layout_height="300dp"/>
 
 </RelativeLayout>
