--- a/app/src/main/res/layout/fragment_intermediate_map.xml
+++ b/app/src/main/res/layout/fragment_intermediate_map.xml
@@ -35,7 +35,7 @@
                 android:layout_marginTop="50dp"
                 android:hint="Enter Place Here"/>
         </android.support.design.widget.TextInputLayout>
-        <Button android:id="@+id/btn_signup"
+        <Button android:id="@+id/btn_add_fav_item"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/btn_add_fav_item"
