--- a/app/src/main/res/layout/content_favourite_list_item.xml
+++ b/app/src/main/res/layout/content_favourite_list_item.xml
@@ -4,22 +4,22 @@
     android:layout_width="match_parent"
     android:layout_height="60dp"
     android:clickable="true"
-    android:background="#88ff66"
-    android:layout_margin="2dp">
+    android:layout_margin="2dp"
+    android:background="@drawable/thin_border">
+
     <ImageView
         android:id="@+id/iv_fav_icon"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginLeft="15dp"
-        android:background="#77AA77"
         android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true" />
+        android:layout_alignParentLeft="true"
+        android:src="@drawable/ic_star_black_36dp"/>
     <LinearLayout
         android:layout_width="250dp"
         android:layout_height="match_parent"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:background="#664488"
         android:orientation="vertical">
         <TextView
             android:id="@+id/tv_name"
@@ -47,5 +47,6 @@
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
         android:layout_marginRight="15dp"
-        android:background="#22AA22"/>
+        android:src="@drawable/ic_more_horiz_black_36dp"
+        />
 </RelativeLayout>
