--- a/app/src/main/res/layout/fragment_intermediate_map.xml
+++ b/app/src/main/res/layout/fragment_intermediate_map.xml
@@ -9,8 +9,7 @@
         android:layout_marginTop="?attr/actionBarSize"
         android:orientation="vertical"
         android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:paddingTop="20dp">
+        android:paddingRight="20dp">
         <android.support.design.widget.TextInputLayout
             android:id="@+id/input_layout_name"
             android:layout_width="match_parent"
