--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,7 @@
 
     <!-- Navigation Drawer width -->
     <dimen name="nav_drawer_width">285dp</dimen>
+    <dimen name="map_height">190dp</dimen>
+    <dimen name="offset">125dp</dimen>
+
 </resources>
