--- a/app/src/main/res/layout/transparent_header_view.xml
+++ b/app/src/main/res/layout/transparent_header_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:background="@android:color/holo_green_light"
     android:layout_width="match_parent"
@@ -13,4 +13,4 @@
         android:minHeight="@dimen/map_height"
         tools:background="@android:color/holo_orange_light"/>
 
-</FrameLayout>
+</LinearLayout>
