--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,5 +14,7 @@
     <!-- Could be used to some icon text and so on -->
     <color name="colorAccent">#FF80AB</color>
 
+    <color name="custom1">#EEEEEE</color>
+
 
 </resources>
