--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,7 +5,9 @@
 
     <!-- Navigation Drawer width -->
     <dimen name="nav_drawer_width">285dp</dimen>
-    <dimen name="map_height">190dp</dimen>
+    <dimen name="map_height">125dp</dimen>
     <dimen name="offset">125dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+
 
 </resources>
