--- a/app/src/main/res/layout/content_favourite_list_item.xml
+++ b/app/src/main/res/layout/content_favourite_list_item.xml
@@ -2,21 +2,24 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="@dimen/fav_item_height"
     android:clickable="true"
-    android:layout_margin="2dp"
+    android:layout_margin="@dimen/fav_item_layout_margin"
     android:background="@drawable/thin_border">
 
     <ImageView
         android:id="@+id/iv_fav_icon"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginLeft="15dp"
+        android:layout_width="@dimen/fav_item_icon_width_height"
+        android:layout_height="@dimen/fav_item_icon_width_height"
+        android:contentDescription="@string/fav_item_icon_description"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="@dimen/fav_item_icon_margin_left_right"
+        android:layout_marginLeft="@dimen/fav_item_icon_margin_left_right"
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:src="@drawable/ic_star_black_36dp"/>
     <LinearLayout
-        android:layout_width="250dp"
+        android:layout_width="@dimen/fav_item_input_layout_width"
         android:layout_height="match_parent"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
@@ -25,28 +28,33 @@
             android:id="@+id/tv_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="15dp"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            android:textSize="15dp"
+            android:paddingStart="@dimen/fav_item_input_padding_left"
+            android:paddingLeft="@dimen/fav_item_input_padding_left"
+            android:paddingTop="@dimen/fav_item_input_padding_top_bottom"
+            android:paddingBottom="@dimen/fav_item_input_padding_top_bottom"
+            android:textSize="@dimen/fav_item_input_text_size"
             android:textStyle="bold" />
         <TextView
             android:id="@+id/tv_descr"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="15dp"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            android:textSize="15dp"
+            android:paddingStart="@dimen/fav_item_input_padding_left"
+            android:paddingLeft="@dimen/fav_item_input_padding_left"
+            android:paddingTop="@dimen/fav_item_input_padding_top_bottom"
+            android:paddingBottom="@dimen/fav_item_input_padding_top_bottom"
+            android:textSize="@dimen/fav_item_input_text_size"
             android:textStyle="bold" />
     </LinearLayout>
     <ImageButton
         android:id="@+id/ib_fav_item_edit"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:contentDescription="@string/fav_item_icon2_description"
+        android:layout_width="@dimen/fav_item_icon_width_height"
+        android:layout_height="@dimen/fav_item_icon_width_height"
         android:layout_centerVertical="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="15dp"
+        android:layout_marginRight="@dimen/fav_item_icon_margin_left_right"
+        android:layout_marginEnd="@dimen/fav_item_icon_margin_left_right"
         android:src="@drawable/ic_more_horiz_black_36dp"
         />
 </RelativeLayout>
