--- a/app/src/main/res/layout/fragment_intermediate_map.xml
+++ b/app/src/main/res/layout/fragment_intermediate_map.xml
@@ -8,8 +8,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="?attr/actionBarSize"
         android:orientation="vertical"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp">
+        android:paddingLeft="@dimen/fav_screen_input_padding_left_right"
+        android:paddingRight="@dimen/fav_screen_input_padding_left_right">
         <android.support.design.widget.TextInputLayout
             android:id="@+id/input_layout_name"
             android:layout_width="match_parent"
@@ -31,15 +31,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="50dp"
-                android:hint="Enter Place Here"/>
+                android:layout_marginTop="@dimen/fav_screen_input_margin_top"
+                android:hint="@string/hint_fav_item_address"/>
         </android.support.design.widget.TextInputLayout>
         <Button android:id="@+id/btn_add_fav_item"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/btn_add_fav_item"
             android:background="@color/colorPrimary"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="@dimen/fav_screen_btn_margin_top"
             android:textColor="@android:color/white"/>
     </LinearLayout>
 
@@ -48,6 +48,6 @@
         android:name="com.google.android.gms.maps.MapFragment"
         android:layout_width="match_parent"
         android:layout_below="@+id/ll_fav_item_fields"
-        android:layout_height="300dp"/>
+        android:layout_height="@dimen/fav_screen_fragment_height"/>
 
 </RelativeLayout>
