--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -36,19 +36,15 @@
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/fab"
                 android:layout_width="wrap_content"
-                android:background="@android:color/transparent"
                 android:layout_height="match_parent"
                 android:layout_gravity="bottom|right|end"
                 android:layout_margin="@dimen/fab_margin"
+                android:background="@android:color/transparent"
+                android:elevation="0dp"
                 android:src="@android:drawable/ic_dialog_email" />
         </FrameLayout>
-
-
 
     </LinearLayout>
 
     <include layout="@layout/fragment_navigation_drawer" />
-
-
-
 </android.support.v4.widget.DrawerLayout>
