--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -56,7 +56,7 @@
                 android:background="@android:color/white"
                 android:visibility="gone" />
 
-            <model.LockableListView
+            <model.HomeListView
                 android:id="@android:id/list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
