Tracking a device is now possible. - Rough visualisation

--- a/app/src/main/res/menu/menu_home_screen.xml
+++ b/app/src/main/res/menu/menu_home_screen.xml
@@ -15,4 +15,9 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_tracking"
+        android:orderInCategory="100"
+        android:title="Track"
+        app:showAsAction="ifRoom"/>
 </menu>
