Search activity basic funcionallity added

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,8 @@
     <color name="colorAccent">#FF80AB</color>
 
     <color name="custom1">#EEEEEE</color>
+    <color name="white">#FFFFFF</color>
+
 
 
 </resources>
