--- a/app/src/main/res/layout/fragment_about_screen.xml
+++ b/app/src/main/res/layout/fragment_about_screen.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.vacho.realtimebusapp.AboutScreenFragment">
+    tools:context="fragment.AboutScreenFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
