--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -39,9 +39,8 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="bottom|right|end"
                 android:layout_margin="@dimen/fab_margin"
-                android:background="@android:color/transparent"
                 android:elevation="0dp"
-                android:src="@android:drawable/ic_dialog_email" />
+                android:src="@drawable/ic_search_black_24dp" />
         </FrameLayout>
 
     </LinearLayout>
