--- a/app/src/main/res/layout/content_search_screen.xml
+++ b/app/src/main/res/layout/content_search_screen.xml
@@ -11,29 +11,39 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:background="@android:color/white"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <ImageView
+            android:layout_margin="12dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_action_search" />
+            android:src="@drawable/ic_keyboard_backspace_24dp"/>
+
+        <ImageView
+            android:layout_marginTop="12dp"
+            android:layout_marginLeft="7dp"
+            android:layout_marginRight="7dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_search_black_24dp" />
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/editable_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:textColorHint="#BDBDBD"
             android:textStyle="italic" />
     </LinearLayout>
 
 
     <com.astuetz.PagerSlidingTabStrip
+        android:background="@android:color/white"
         android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        app:pstsIndicatorColor="@color/colorPrimary"
+        app:pstsIndicatorColor="@color/colorAccent"
         app:pstsShouldExpand="true"></com.astuetz.PagerSlidingTabStrip>
 
     <android.support.v4.view.ViewPager
