--- a/app/src/main/res/layout/fragment_bus_lines.xml
+++ b/app/src/main/res/layout/fragment_bus_lines.xml
@@ -1,15 +1,14 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="fragment.BusLinesFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/busLines"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Fragment #X"
-        android:gravity="center"/>
 
-</FrameLayout>
+    <ListView
+        android:id="@android:id/list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+</LinearLayout>
