--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -14,9 +14,8 @@
     tools:background="@android:color/holo_orange_light">
 
     <ImageView
-        android:paddingLeft="10dp"
+        android:paddingLeft="16dp"
         android:id="@+id/image_da"
-        android:background="@android:color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
@@ -26,12 +25,16 @@
         android:orientation="vertical">
 
         <TextView
+            android:textSize="17sp"
             android:paddingLeft="10dp"
             android:id="@+id/sss"
+            android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <TextView
+            android:textSize="15sp"
+            android:textStyle="normal"
             android:paddingLeft="10dp"
             android:id="@+id/nnn"
             android:layout_width="wrap_content"
