--- a/app/src/main/res/layout/content_favourite_list_item.xml
+++ b/app/src/main/res/layout/content_favourite_list_item.xml
@@ -5,7 +5,7 @@
     android:layout_height="@dimen/fav_item_height"
     android:clickable="true"
     android:layout_margin="@dimen/fav_item_layout_margin"
-    android:background="@drawable/thin_border">
+    android:background="@android:color/white">
 
     <ImageView
         android:id="@+id/iv_fav_icon"
@@ -13,11 +13,11 @@
         android:layout_height="@dimen/fav_item_icon_width_height"
         android:contentDescription="@string/fav_item_icon_description"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="@dimen/fav_item_icon_margin_left_right"
-        android:layout_marginLeft="@dimen/fav_item_icon_margin_left_right"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
-        android:src="@drawable/ic_star_black_36dp"/>
+        android:src="@drawable/ic_star_black_24dp"/>
     <LinearLayout
         android:layout_width="@dimen/fav_item_input_layout_width"
         android:layout_height="match_parent"
@@ -25,25 +25,24 @@
         android:layout_centerHorizontal="true"
         android:orientation="vertical">
         <TextView
+            android:paddingTop="10dp"
+            android:layout_marginLeft="5dp"
             android:id="@+id/tv_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingStart="@dimen/fav_item_input_padding_left"
-            android:paddingLeft="@dimen/fav_item_input_padding_left"
-            android:paddingTop="@dimen/fav_item_input_padding_top_bottom"
-            android:paddingBottom="@dimen/fav_item_input_padding_top_bottom"
-            android:textSize="@dimen/fav_item_input_text_size"
-            android:textStyle="bold" />
+            android:textSize="17sp"
+            android:textStyle="bold"
+            android:singleLine="true"
+           />
         <TextView
+            android:singleLine="true"
+            android:layout_marginLeft="5dp"
+            android:paddingBottom="10dp"
             android:id="@+id/tv_descr"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingStart="@dimen/fav_item_input_padding_left"
-            android:paddingLeft="@dimen/fav_item_input_padding_left"
-            android:paddingTop="@dimen/fav_item_input_padding_top_bottom"
-            android:paddingBottom="@dimen/fav_item_input_padding_top_bottom"
             android:textSize="@dimen/fav_item_input_text_size"
-            android:textStyle="bold" />
+            android:textStyle="normal" />
     </LinearLayout>
     <ImageButton
         android:id="@+id/ib_fav_item_edit"
@@ -55,6 +54,7 @@
         android:layout_alignParentRight="true"
         android:layout_marginRight="@dimen/fav_item_icon_margin_left_right"
         android:layout_marginEnd="@dimen/fav_item_icon_margin_left_right"
-        android:src="@drawable/ic_more_horiz_black_36dp"
+        android:background="@android:color/white"
+        android:src="@drawable/ic_more_vert_black_24dp"
         />
 </RelativeLayout>
