--- a/app/src/main/res/layout/content_favourites_screen.xml
+++ b/app/src/main/res/layout/content_favourites_screen.xml
@@ -1,75 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:scrollbars="vertical">
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/til_fav_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <EditText
-            android:id="@+id/et_fav_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/hint_fav_item_name"/>
-    </android.support.design.widget.TextInputLayout>
+    <!--<android.support.design.widget.TextInputLayout-->
+        <!--android:id="@+id/til_fav_name"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content">-->
+        <!--<EditText-->
+            <!--android:id="@+id/et_fav_name"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:hint="@string/hint_fav_item_name"/>-->
+    <!--</android.support.design.widget.TextInputLayout>-->
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/til_fav_address"
-        android:layout_below="@+id/til_fav_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <EditText
-            android:id="@+id/et_fav_address"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/hint_fav_item_descr"/>
-    </android.support.design.widget.TextInputLayout>
+    <!--<android.support.design.widget.TextInputLayout-->
+        <!--android:id="@+id/til_fav_address"-->
+        <!--android:layout_below="@+id/til_fav_name"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content">-->
+        <!--<EditText-->
+            <!--android:id="@+id/et_fav_address"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:hint="@string/hint_fav_item_descr"/>-->
+    <!--</android.support.design.widget.TextInputLayout>-->
 
-    <Button
-        android:id="@+id/btn_add_fav"
-        android:layout_below="@+id/til_fav_address"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/btn_add_fav_item"
-        />
 
-    <Button
-        android:id="@+id/btn_update_fav"
-        android:layout_below="@+id/til_fav_address"
-        android:layout_toEndOf="@+id/btn_add_fav"
-        android:layout_toRightOf="@+id/btn_add_fav"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/btn_update_fav_item"
-        />
 
-    <Button
-        android:id="@+id/btn_del_fav"
-        android:layout_below="@+id/til_fav_address"
-        android:layout_toEndOf="@+id/btn_update_fav"
-        android:layout_toRightOf="@+id/btn_update_fav"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/btn_delete_fav_item"
-        />
+    <!--<Button-->
+        <!--android:id="@+id/btn_update_fav"-->
+        <!--android:layout_below="@+id/til_fav_address"-->
+        <!--android:layout_toEndOf="@+id/btn_add_fav"-->
+        <!--android:layout_toRightOf="@+id/btn_add_fav"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="@string/btn_update_fav_item"-->
+        <!--/>-->
 
-    <Button
-        android:id="@+id/btn_refresh_fav"
-        android:layout_below="@+id/til_fav_address"
-        android:layout_toEndOf="@+id/btn_del_fav"
-        android:layout_toRightOf="@+id/btn_del_fav"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/btn_refresh_fav_item_list"
-        />
+    <!--<Button-->
+        <!--android:id="@+id/btn_del_fav"-->
+        <!--android:layout_below="@+id/til_fav_address"-->
+        <!--android:layout_toEndOf="@+id/btn_update_fav"-->
+        <!--android:layout_toRightOf="@+id/btn_update_fav"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="@string/btn_delete_fav_item"-->
+        <!--/>-->
+
+    <!--<Button-->
+        <!--android:id="@+id/btn_refresh_fav"-->
+        <!--android:layout_below="@+id/til_fav_address"-->
+        <!--android:layout_toEndOf="@+id/btn_del_fav"-->
+        <!--android:layout_toRightOf="@+id/btn_del_fav"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="@string/btn_refresh_fav_item_list"-->
+        <!--/>-->
+
+
     <android.support.v7.widget.RecyclerView
+        android:layout_weight="1"
         android:id="@+id/rv_fav_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/btn_add_fav"
         android:layout_marginTop="@dimen/fav_item_list_margin_top">
     </android.support.v7.widget.RecyclerView>
 
-</RelativeLayout>
+</LinearLayout>
