--- a/app/src/main/res/layout/content_favourite_list_item.xml
+++ b/app/src/main/res/layout/content_favourite_list_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:id="@+id/aaaa"
     android:layout_width="match_parent"
     android:layout_height="@dimen/fav_item_height"
     android:clickable="true"
@@ -44,8 +45,8 @@
             android:textSize="@dimen/fav_item_input_text_size"
             android:textStyle="normal" />
     </LinearLayout>
-    <ImageButton
-        android:id="@+id/ib_fav_item_edit"
+    <ImageView
+        android:id="@+id/favourite_image_view"
         android:contentDescription="@string/fav_item_icon2_description"
         android:layout_width="@dimen/fav_item_icon_width_height"
         android:layout_height="@dimen/fav_item_icon_width_height"
