--- a/app/src/main/res/layout/content_search_screen.xml
+++ b/app/src/main/res/layout/content_search_screen.xml
@@ -7,56 +7,70 @@
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.vacho.realtimebusapp.SearchScreen"
-    tools:showIn="@layout/activity_search_screen">
+    tools:showIn="@layout/activity_search_screen"
+    >
 
     <LinearLayout
+        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
-        android:background="@android:color/white"
         android:layout_height="wrap_content"
+        android:background="@android:color/white"
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_margin="12dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="15dp"
             android:contentDescription="@string/nav_item_back"
-            android:src="@drawable/ic_keyboard_backspace_24dp"/>
+            android:src="@drawable/ic_keyboard_backspace_24dp" />
 
-        <ImageView
-            android:layout_marginTop="12dp"
-            android:layout_marginLeft="7dp"
-            android:layout_marginRight="7dp"
-            android:layout_width="wrap_content"
+
+        <LinearLayout
+            android:paddingBottom="5dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:contentDescription="@string/action_search"
-            android:src="@drawable/ic_search_black_24dp" />
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/editable_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <AutoCompleteTextView
-                android:id="@+id/atv_autocomplete_fav_item_address"
-                android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:background="@drawable/background"
+            android:layout_marginRight="20dp">
+            <ImageView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColorHint="#BDBDBD"
-                android:textStyle="italic" />
-        </android.support.design.widget.TextInputLayout>
+                android:layout_marginRight="7dp"
+                android:layout_marginTop="15dp"
+                android:contentDescription="@string/action_search"
+                android:src="@drawable/ic_search_black_24dp" />
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/editable_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <AutoCompleteTextView
+                    android:background="@drawable/white_background"
+                    android:id="@+id/atv_autocomplete_fav_item_address"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColorHint="#BDBDBD"
+                    android:textStyle="italic" />
+            </android.support.design.widget.TextInputLayout>
+        </LinearLayout>
+
     </LinearLayout>
 
 
     <com.astuetz.PagerSlidingTabStrip
-        android:background="@android:color/white"
         android:id="@+id/tabs"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        app:pstsIndicatorColor="@color/colorAccent"
-        app:pstsShouldExpand="true"/>
+        android:layout_height="55dp"
+        android:background="@android:color/white"
+        app:pstsIndicatorColor="@color/colorPrimary"
+        app:pstsUnderlineColor="@color/colorPrimary"
+        app:pstsShouldExpand="true" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/white"/>
+        android:background="@android:color/white" />
 </LinearLayout>
 
