--- a/app/src/main/res/layout/location_list_view_row.xml
+++ b/app/src/main/res/layout/location_list_view_row.xml
@@ -7,19 +7,20 @@
     android:layout_gravity="center_horizontal|center_vertical|center">
 
     <ImageView
-        android:id="@+id/bus_lines_image_view"
+        android:id="@+id/location_image_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/bus_line_icon"
+        android:contentDescription="@string/location_item_icon"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"/>
 
     <TextView
-        android:id="@+id/bus_lines_text_view"
+        android:id="@+id/location_text_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center_vertical|center"
         android:gravity="center_vertical"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"/>
+
 </LinearLayout>
