--- a/app/src/main/res/layout/content_navigation_drawer.xml
+++ b/app/src/main/res/layout/content_navigation_drawer.xml
@@ -12,14 +12,16 @@
         android:background="@color/colorPrimary">
 
         <ImageView
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:src="@drawable/ic_action_search"
-        android:scaleType="fitCenter"
-        android:layout_centerInParent="true" />
+            android:layout_width="160dp"
+            android:layout_height="180dp"
+            android:layout_centerInParent="true"
+            android:contentDescription="@string/icon_logo"
+            android:scaleType="fitCenter"
+            android:src="@mipmap/ic_launcher" />
 
 
     </RelativeLayout>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/drawerList"
         android:layout_width="match_parent"
