Added Buttons for clearing the map and finding nearby bus stations

--- a/app/src/main/res/menu/menu_home_screen.xml
+++ b/app/src/main/res/menu/menu_home_screen.xml
@@ -40,4 +40,14 @@
         android:orderInCategory="100"
         android:title="@string/action_map_terrain"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_map_clear"
+        android:orderInCategory="100"
+        android:title="@string/action_map_clear"
+        app:showAsAction="never"/>
+    <item
+        android:id="@+id/action_map_find_stations"
+        android:orderInCategory="100"
+        android:title="@string/action_map_find_stations"
+        app:showAsAction="never"/>
 </menu>
